name:                dates
version:             0.1.0.0
synopsis:            Small library for parsing different dates formats.
description:         This package allows to parse many different formats
                     of dates. For example, `2012/09/06' or '06.09.2012'
                     are supported.
homepage:            http://redmine.iportnov.ru/projects/dates/
license:             BSD3
license-file:        LICENSE
author:              IlyaPortnov
maintainer:          portnov84@rambler.ru
-- copyright:           
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Data.Dates
  -- other-modules:       
  build-depends:       base ==4.5.*,
                       base-unicode-symbols ==0.2.*,
                       time ==1.4.*,
                       parsec ==3.1.*,
                       syb ==0.3.*
